# chunker

./: .gitignore  Dockerfile  README.md  chunker.py  chunker_mcp.py  docker-compose.yml  langchain_vectorizer.py  pyproject.toml
.aiassistant/: conventions.md  test_conventions.md
chunker/: __init__.py  chunk_and_vectorise.py  chunker_mcp.py
chunker_src/: chunk_and_vectorise.py  chunker_mcp.py  cli.py  crud.py  model.py  query_chunks.py
deployment/: chunk_and_test.sh  test_chunked_file.sh
deployment/tests/testproject/: bar.py
deployment/tests/testproject/sub/: baz.py
tests/: test_chunk_and_vectorise_private.py  test_chunker_mcp_private.py
