[project]
name = "chunker"
version = "0.1.0"
description = "A CLI tool for chunking and vectorising code files"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
    "langchain-text-splitters",
    "fastmcp",
    "chromadb-client>=1.0.5",
]

[project.scripts]
chunker = "chunker_src:app"

[dependency-groups]
dev = [
    "pipx>=1.7.1",
]

[tool.setuptools.packages.find]
include = ["chunker*"]
exclude = ["deployment*"]
